# scancode-rust

./: .gitattributes  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  COMPARISON.md  Cargo.toml  DEBUG.md  FINAL_STATUS_REPORT.md  FIX_PLAN.md  HYPOTHESIS_LIST.md  INVESTIGATION_PLAN.md  NOTICE  PARSER_FEATURE_PARITY.md  PLAN-FIX-MATCH-POSITIONS.md  README.md  REGRESSION_FIX_PLAN.md  SESSION.md  debug_cc.rs  debug_gpl_eula.rs  debug_gpl_or_mit_test.rs  dist-workspace.toml  lefthook.yml  output.json  package-lock.json  package.json  release.sh  renovate.json  setup.sh  test_cc_by_sa_debug.rs  test_deunicode.rs
.github/: pull_request_template.md
.github/workflows/: check.yml  release.yml
docs/: ARCHITECTURE.md  DEBUG-LICENSE-DETECTION.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  HOW_TO_ADD_A_PARSER.md  LICENSE_DETECTION_ARCHITECTURE.md  LICENSE_VARIANT_SELECTION_INVESTIGATION.md  MARKDOWN_LINTING_STATUS.md  NEXT_PHASE_PLAN.md  PARSER_IMPLEMENTATION_PLAN.md  RELEASING.md  STRUCTURED_FORMAT_HANDLING.md  SUPPORTED_FORMATS.md  TESTING_STRATEGY.md  license_detection_comparison_report.md
docs/adr/: 0001-trait-based-parsers.md  0002-extraction-vs-detection.md  0003-golden-test-strategy.md  0004-security-first-parsing.md  0005-auto-generated-docs.md  0006-datasourceid-driven-package-assembly.md  0007-embedded-license-index-artifact-strategy.md  README.md  template.md
docs/archived/: FEATURE_PARITY.md  PARSER_IMPLEMENTATION_PLAN.md
docs/implementation-plans/: README.md
docs/improvements/: README.md  about-parser.md  alpine-parser.md  arch-parser.md  bazel-module-parser.md  bun-lock-parser.md  cargo-parser.md  clojure-parser.md  cocoapods-parser.md  composer-parser.md  conan-data-parser.md  conan-parser.md  conda-parser.md  copyright-detection.md  cpan-dist-ini-parser.md  cpan-makefile-pl-parser.md  cpan-parser.md  dart-parser.md  debian-parser.md  deno-parser.md  docker-parser.md  email-url-detection.md  gitmodules-parser.md  go-parser.md  go-work-parser.md  gradle-lockfile-parser.md  gradle-module-parser.md  gradle-parser.md  hackage-parser.md  helm-parser.md  hex-lock-parser.md  maven-parser.md  meson-parser.md  nix-parser.md  npm-git-url-dependencies.md  npm-workspace-parser.md  npm-yarn-parser.md  nuget-parser.md  nuget-party-type-inference.md  os-release-parser.md  (+13 more)
docs/investigation/: golden-test-findings.md
docs/license-detection/: 0012-gpl-plus-parsing.md  0013-spdx-expression-detection.md  0014-other-license-detection-issues.md  0015-filter-dupes-regressions.md  0016-feature-parity-roadmap.md  0017-phase1-duplicate-detection-plan.md  0018-phase2-sourcemap-plan.md  0019-phase3-expression-combination-plan.md  0020-phase4-missing-detection-plan.md  0021-phase5-wrong-license-plan.md  0022-phase6-extra-detections-plan.md  0023-phase7-spdx-parsing-plan.md  0024-phase8-order-differences-plan.md  0025-duplicate-detection-plan.md  0026-license-variant-selection-plan.md  0027-extra-detections-plan.md  0028-spdx-parsing-plan.md  0029-detection-grouping-plan.md  ARCHITECTURE.md  BUG-006-merge-positions-fix.md  BUG-007-solo-exception-difference.md  BUG-008-qregion-len-offbyone.md  BUG-009-filter-required-phrases.md  BUG-010-filter-overlapping-regression.md  BUG-GPL-FALSE-POSITIVE-THRESHOLD.md  FILTER_DUPES_REGRESSION_INVESTIGATION.md  GAPS.md  GOLDEN_TEST_PLAN.md  LIC1_FAILURES.md  MISC.md  PERF_OPTIMIZATION_PLAN.md  PLAN-001-gpl-lgpl-complex.md  PLAN-002-gpl-mpl.md  PLAN-003-here-proprietary.md  PLAN-004-ijg.md  PLAN-005-kde-licenses.md  PLAN-006-match-filtering-fix.md  PLAN-006-plantuml.md  PLAN-007-is-license-intro-clue-fix.md  PLAN-007-something-html.md  (+115 more)
examples/: debug_flex.rs
resources/license_detection/: license_index.bincode.zst  license_index.zst
scripts/: README.md  benchmark.sh  cargo_isolated.sh  check_unused_deps.sh  check_xtask_lockfile_sync.sh  dev.sh  dev_test.sh  extract_urls.sh  generate_test_expected.sh  update-license-loader-artifact.sh  update_copyright_golden.sh  update_license_golden.sh  update_license_loader_artifact.sh  update_parser_golden.sh  validate_urls.py
src/: cli.rs  golden_maintenance.rs  lib.rs  license_detection_golden_test.rs  license_detection_test.rs  main.rs  main_test.rs  progress.rs  scan_result_shaping.rs  scan_result_shaping_test.rs  test_utils.rs
src/askalono/: license.rs  mod.rs  ngram.rs  preproc.rs  strategy.rs
src/assembly/: assemblers.rs  assembly_golden_test.rs  assembly_test.rs  cargo_resource_assign.rs  cargo_workspace_merge.rs  composer_resource_assign.rs  conda_rootfs_merge.rs  dir_assign.rs  file_ref_resolve.rs  file_ref_resolve_test.rs  hackage_merge.rs  mod.rs  nested_merge.rs  nested_merge_test.rs  npm_resource_assign.rs  npm_workspace_merge.rs  nuget_cpm_resolve.rs  python_requirements_assign.rs  ruby_resource_assign.rs  sibling_merge.rs  swift_merge.rs  workspace_merge.rs
src/cache/: config.rs  io.rs  license_index_cache.rs  metadata.rs  mod.rs  paths.rs  (+1 more)
testdata/assembly-golden/hackage-basic/: aaa-example-hackage.cabal  cabal.project  expected.json  stack.yaml
testdata/bazel-golden/module/: MODULE.bazel  MODULE.bazel-expected.json  MODULE_no_version.bazel  MODULE_no_version.bazel-expected.json
testdata/cargo/: Cargo-api-url-basic.toml  Cargo-api-url-no-version.toml  Cargo-basic.toml  Cargo-minimal.toml  Cargo.toml
testdata/cargo-golden/single-file-scan/: Cargo.toml  Cargo.toml.expected
testdata/cargo-workspace/: Cargo.toml
testdata/cargo-workspace/crates/cli/: Cargo.toml
testdata/cargo-workspace/crates/core/: Cargo.toml
testdata/cargo/git-path-deps/: Cargo.toml
testdata/hackage-golden/cabal-basic/: example-hackage.cabal  example-hackage.cabal.expected.json
testdata/meson-golden/guardrails-and-skips/: meson.build  meson.build-expected.json
testdata/meson-golden/literal-root/: meson.build  meson.build-expected.json
tests/: output_format_golden.rs  progress_cli_integration.rs  reference_fixture_guard.rs  scanner_copyright_credits.rs  scanner_integration.rs  test_gpl_412.rs  test_tokenizer.rs
xtask/: Cargo.toml
(+3000 files in other folders)
