[package]
name = "scancode-rust"
version = "0.0.5"
edition = "2024"
repository = "https://github.com/mstykow/scancode-rust"
description = "A Rust-based tool for scanning and analyzing code."
license = "Apache-2.0"
keywords = ["scancode", "license", "analysis", "rust"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
authors = ["Maxim Stykow", "Adrian Braemer"]
# Include only files needed to build from source
# See "License Data Architecture" section in README.md for details on how license data is embedded
include = [
    "src/**/*",
    "resources/licenses/json/details/**/*.json",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]

[package.metadata.cargo-machete]
ignored = ["md-5", "kamadak-exif"]  # Used as `md5`/`exif` (crate renames) — machete can't detect without --with-metadata

[package.metadata.release]
# Sign git tags with GPG
sign-tag = true
# Push automatically
push = true
# Commit message template
pre-release-commit-message = "chore: release v{{version}}"
# Tag message template
tag-message = "Release v{{version}}"
# Publish to crates.io automatically
publish = true

[dependencies]
# askalono
anyhow = "1.0.102"
flate2 = "1.1.9"
lazy_static = "1.5.0"
liblzma = "0.4.6"
log = "0.4.29"
regex = "1.12.3"
rmp-serde = "1.3.1"
rustpython-parser = "0.4.0"
unicode-normalization = "0.1.25"
zstd = "0.13.3"

# own
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
content_inspector = "0.2.4"
derive_builder = "0.20.2"
glob = "0.3.3"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
include_dir = "0.7.4"
indicatif = "0.18.4"
indicatif-log-bridge = "0.2.3"
json5 = "1.3.1"
kamadak-exif = "0.6.1"
md-5 = "0.10.6"
mime_guess = "2.0.5"
packageurl = "0.6.0"
pep508_rs = "0.9.2"
pdf-extract = "0.10.0"
rayon = "1.11.0"
rustc_version_runtime = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_yaml = "0.9.34"
sha1 = "0.10.6"
csv = "1.4.0"
inventory = "0.3.22"
sha2 = "0.10.9"
tar = "0.4.44"
sys-info = "0.9.1"
toml = "1.0.6"
url = "2.5.8"
quick-xml = "0.39.2"
tera = { version = "1.20.1", default-features = false }
zip = "8.2.0"
uuid = { version = "1.22.0", features = ["v4"] }
blake3 = "1.8.3"
env_logger = "0.11.9"

# Linux package parsers
ar = "0.9"           # Unix ar archive format (for .deb)
rpm = { version = "0.19.0", default-features = false, features = ["gzip-compression", "xz-compression", "zstd-compression", "bzip2-compression"] }
rpmdb = { git = "https://github.com/yybit/rpmdb-rs", rev = "8a20c8b8" }
strum = { version = "0.28.0", features = ["derive"] }

[dev-dependencies]
# own
tempfile = "3.27.0"

[profile.release]
# Enable link-time optimization for better cross-module optimizations
lto = true

# Enable whole-program optimization
codegen-units = 1

# Maximum optimization level
opt-level = 3

# Strip debug symbols to reduce binary size
strip = true

[[bin]]
name = "scancode-rust"
path = "src/main.rs"

[[bin]]
name = "generate-supported-formats"
path = "src/bin/generate_supported_formats.rs"

[[bin]]
name = "update-parser-golden"
path = "bin/update_parser_golden.rs"

[[bin]]
name = "update-copyright-golden"
path = "bin/update_copyright_golden.rs"

[[bin]]
name = "validate-urls"
path = "bin/validate_urls.rs"

[features]
default = ["spdx"]
golden-tests = []
gzip = []
spdx = []
