[package]
name = "provenant-cli"
version = "0.0.5"
edition = "2024"
repository = "https://github.com/mstykow/provenant"
homepage = "https://github.com/mstykow/provenant"
description = "Provenant is a high-performance Rust scanner for licenses, packages, and source provenance."
license = "Apache-2.0"
keywords = ["provenance", "license", "analysis", "rust"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
authors = ["Maxim Stykow", "Adrian Braemer"]
# Include only files needed to build from source
include = [
    "src/**/*",
    "/resources/licenses/json/details/**/*.json",
    "/resources/license_detection/license_index_loader.msgpack.zst",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/NOTICE",
]

[package.metadata.cargo-machete]
ignored = ["md-5", "kamadak-exif"]  # Used as `md5`/`exif` (crate renames) — machete can't detect without --with-metadata

[package.metadata.release]
# Sign git tags with GPG
sign-tag = true
# Push automatically
push = true
# Commit message template
pre-release-commit-message = "chore: release v{{version}}"
# Tag message template
tag-message = "Release v{{version}}"
# Publish to crates.io automatically
publish = true

[dependencies]
anyhow = "1.0.102"
bzip2 = "0.6.1"
flate2 = "1.1.9"
lazy_static = "1.5.0"
liblzma = "0.4.6"
log = "0.4.29"
regex = "1.12.3"
rustpython-parser = "0.4.0"
unicode-normalization = "0.1.25"
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
content_inspector = "0.2.4"
zstd = "0.13.3"
derive_builder = "0.20.2"
glob = "0.3.3"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
include_dir = "0.7.4"
indicatif = "0.18.4"
indicatif-log-bridge = "0.2.3"
json5 = "1.3.1"
kamadak-exif = "0.6.1"
md-5 = "0.10.6"
mime_guess = "2.0.5"
packageurl = "0.6.0"
pep508_rs = "0.9.2"
pdf-extract = "0.10.0"
rayon = "1.11.0"
rustc_version_runtime = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_yaml = "0.9.34"
sha1 = "0.10.6"
hex = "0.4"
csv = "1.4.0"
inventory = "0.3.22"
sha2 = "0.10.9"
tar = "0.4.44"
sys-info = "0.9.1"
toml = "1.0.6"
url = "2.5.8"
urlencoding = "2.1.3"
xml-rs = "1.0.0"
quick-xml = "0.39.2"
zip = "8.2.0"
uuid = { version = "1.22.0", features = ["v4"] }
blake3 = "1.8.3"
once_cell = "1.21.3"
aho-corasick = "1.0"
deunicode = "1.6.2"
tera = { version = "1.20.1", default-features = false }
env_logger = "0.11.9"
ar = "0.9"           # Unix ar archive format (for .deb)
rpm = { version = "0.19.0", default-features = false, features = ["gzip-compression", "xz-compression", "zstd-compression", "bzip2-compression"] }
rpmdb = { version = "0.1.0", git = "https://github.com/yybit/rpmdb-rs", rev = "8a20c8b8" }
strum = { version = "0.28.0", features = ["derive"] }
rmp-serde = "1.3.1"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
# Enable link-time optimization for better cross-module optimizations
lto = true

# Enable whole-program optimization
codegen-units = 1

# Maximum optimization level
opt-level = 3

# Strip debug symbols to reduce binary size
strip = true

[lib]
name = "provenant"
path = "src/lib.rs"

[[bin]]
name = "provenant"
path = "src/main.rs"

[features]
default = ["spdx"]
golden-tests = []
gzip = []
spdx = []
