[package]
name = "provenant-cli"
version = "0.0.7"
edition = "2024"
repository = "https://github.com/mstykow/provenant"
homepage = "https://github.com/mstykow/provenant"
description = "Provenant is a high-performance Rust scanner for licenses, packages, and source provenance."
license = "Apache-2.0"
keywords = ["provenance", "license", "analysis", "rust"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
authors = ["Maxim Stykow", "Adrian Braemer"]
# Include only files needed to build from source
include = [
    "src/**/*",
    "/resources/license_detection/license_index.bincode.zst",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/NOTICE",
]

[package.metadata.cargo-machete]
ignored = ["md-5", "kamadak-exif"]  # Used as `md5`/`exif` (crate renames) — machete can't detect without --with-metadata

[package.metadata.release]
# Sign git tags with GPG
sign-tag = true
# Push automatically
push = true
# Commit message template
pre-release-commit-message = "chore: release v{{version}}"
pre-release-hook = ["cargo", "generate-lockfile"]
# Tag message template
tag-message = "Release v{{version}}"
# Publish to crates.io automatically
publish = true

[workspace]
resolver = "3"
members = ["xtask"]

[workspace.dependencies]
anyhow = "1.0.102"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
inventory = "0.3.22"
lazy_static = "1.5.0"
rayon = "1.11.0"
regex = "1.12.3"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_yaml = "0.9.34"
tempfile = "3.27.0"
url = "2.5.8"
zstd = "0.13.3"

[dependencies]
anyhow = { workspace = true }
bzip2 = "0.6.1"
flate2 = "1.1.9"
lazy_static = { workspace = true }
liblzma = "0.4.6"
log = "0.4.29"
regex = { workspace = true }
rustpython-parser = "0.4.0"
unicode-normalization = "0.1.25"
base64 = "0.22.1"
chrono = "0.4.44"
clap = { workspace = true }
content_inspector = "0.2.4"
zstd = { workspace = true }
derive_builder = "0.20.2"
glob = "0.3.3"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
include_dir = "0.7.4"
indicatif = "0.18.4"
indicatif-log-bridge = "0.2.3"
json5 = "1.3.1"
kamadak-exif = "0.6.1"
md-5 = "0.10.6"
mime_guess = "2.0.5"
packageurl = "0.6.0"
pep508_rs = "0.9.2"
pdf-extract = "0.10.0"
rayon = { workspace = true }
rustc_version_runtime = "0.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = "0.10.6"
hex = "0.4.3"
csv = "1.4.0"
inventory = { workspace = true }
sha2 = "0.10.9"
tar = "0.4.45"
sys-info = "0.9.1"
toml = "1.0.6"
url = { workspace = true }
urlencoding = "2.1.3"
xml-rs = "1.0.0"
quick-xml = "0.39.2"
zip = "8.4.0"
uuid = { version = "1.22.0", features = ["v4"] }
blake3 = "1.8.3"
once_cell = "1.21.4"

deunicode = "1.6.2"
tera = { version = "1.20.1", default-features = false }
env_logger = "0.11.10"
ar = "0.9"           # Unix ar archive format (for .deb)
rpm = { version = "0.19.0", default-features = false, features = ["gzip-compression", "xz-compression", "zstd-compression", "bzip2-compression"] }
strum = { version = "0.28.0", features = ["derive"] }
rmp-serde = { workspace = true }
bit-set = "0.9.1"
bincode = { workspace = true }
daachorse = "1.0.0"

[target.'cfg(unix)'.dependencies]
rpmdb = { version = "0.1.0", git = "https://github.com/yybit/rpmdb-rs", rev = "8a20c8b8" }

[dev-dependencies]
tempfile = { workspace = true }

[profile.release]
# Enable link-time optimization for better cross-module optimizations
lto = true

# Enable whole-program optimization
codegen-units = 1

# Maximum optimization level
opt-level = 3

# Strip debug symbols to reduce binary size
strip = true

[profile.profiling]
inherits = "release"
strip = false
debug = true

[lib]
name = "provenant"
path = "src/lib.rs"

[[bin]]
name = "provenant"
path = "src/main.rs"

[features]
default = ["spdx"]
golden-tests = []
gzip = []
spdx = []
