[package]
name = "provenant-xtask"
version = "0.0.0"
edition = "2024"
publish = false
autobins = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
inventory = { workspace = true }
lazy_static = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
provenant = { path = "..", package = "provenant-cli" }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
url = { workspace = true }
zstd = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "update-parser-golden"
path = "src/bin/update_parser_golden.rs"

[[bin]]
name = "update-copyright-golden"
path = "src/bin/update_copyright_golden.rs"

[[bin]]
name = "validate-urls"
path = "src/bin/validate_urls.rs"

[[bin]]
name = "generate-supported-formats"
path = "src/bin/generate_supported_formats.rs"

[[bin]]
name = "update-license-golden"
path = "src/bin/update_license_golden.rs"

[[bin]]
name = "generate-index-artifact"
path = "src/bin/generate_index_artifact.rs"
