[package]
name = "test-cargo"
version = "1.2.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/test-cargo"
homepage = "https://example.com"
authors = ["Test User <test@example.com>"]

[dependencies]
serde = "1.0.228"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
mockito = "0.31.0"