cabal-version:      3.0
name:               example-hackage
version:            0.1.0.0
synopsis:           Example Hackage package
description:
  Example Hackage package.
  .
  More details for parser golden coverage.
license:            BSD-3-Clause
homepage:           https://example.com/example-hackage
bug-reports:        https://example.com/example-hackage/issues
author:             Alice Example <alice@example.com>, Bob Example
maintainer:         Carol Maintainer <carol@example.com>
category:           Web, CLI
keywords:           parser, haskell
source-repository head
  type: git
  location: https://github.com/example/example-hackage.git

library
  exposed-modules: Example.Library
  build-depends:
      base >=4.14 && <5,
      text ==1.2.5.0

executable example-cli
  main-is: Main.hs
  build-depends:
      base >=4.14 && <5,
      example-hackage,
      optparse-applicative >=0.17

test-suite example-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
      base,
      hspec >=2.10
